# dummybot-ros2-encoder

./: + updated README  .gitignore  README.md
docs/: udev-setup.md
docs/calibration/: motor_calibration.md
docs/hardware/: specifications.md
docs/setup/: installation.md
docs/troubleshooting/: common_issues.md
ros2_ws/: .gitignore  MCP_NAV_README.md
ros2_ws/src/amr2ax_nav2/: CMakeLists.txt  mapst12.yaml  package.xml
ros2_ws/src/amr2ax_nav2/behavior_trees/: battery_aware_navigation.xml  battery_aware_waypoint_navigation.xml  dynamic_object_following.xml
ros2_ws/src/amr2ax_nav2/config/: gps_localization.yaml  named_waypoints.yaml  nav2_amrtcm_view.rviz  nav2_gps_params.yaml  nav2_indoor_params copy.yaml  nav2_indoor_params-.yaml  nav2_indoor_params.yaml  nav2_indoor_params_09.01.yaml  nav2_indoor_params_amr2ax.yaml  nav2_indoor_params_amr2wd.yaml  slam_toolbox.yaml  waypoints.yaml  xplore_23.01.2026.yaml  xplorer 05.12.2025v1.yaml  xplorer 23.07.yaml  xplorer copy 2.yaml  xplorer copy.yaml  xplorer.yaml  xplorer_02.12.2025.yaml  xplorer_05.12.2025.yaml  xplorer_05.12.2025v0.yaml  xplorer_dynamic_following.yaml  xplorer_opt.yaml  xplorer_v0.yaml
ros2_ws/src/amr2ax_nav2/launch/: amr2ab.launch.py  amr2ax-demo.launch.py  amr2ax.launch.py  amrtcm.launch.py  bringup_launch copy.py  bringup_launch.py  localization.launch.py  localization_launch.py  nav2.launch.py  navigation_launch.py  navxplorer.launch copy.py  navxplorer.launch.py  navxplorer_dynamic_following.launch.py  rviz.launch.py  test_dynamic_following.launch.py
ros2_ws/src/amr2ax_nav2/launch/include/: 3d_localization.launch.py  amcl.launch.py  gps_localization.launch.py  navigation.launch.py  slam_toolbox.launch.py
ros2_ws/src/amr2ax_nav2/maps/: .yaml  204_25.07.pgm  204_25.07.yaml  204_25.07v2.pgm  amr2axt1.pgm  amr2axt1.yaml  b41.pgm  b41.yaml  b42.pgm  b42.yaml  cb201.pgm  cb201.yaml  cb204.pgm  cb204.yaml  cb204.yaml.save  cb204_07.10.2025.pgm  cb204_07.10.2025.yaml  cb204_13.12.05v4.pgm  cb204_13.12.05v4.yaml  cb204_23.07.05.pgm  cb204_23.07.05.yaml  cb204_23.07.05v2.pgm  cb204_23.07.05v2.yaml  cb204_xplorer.pgm  cb204_xplorer.yaml  cb204v1.pgm  cb204v1.yaml  demo_map.yaml  demo_map_4x4.pgm  demo_map_4x4.yaml  fiir2.pgm  fiir2.yaml  fiir3.pgm  fiir3.yaml  harta_casa.pgm  harta_casa.yaml  harta_casa_edited.pgm  harta_casa_edited.yaml  harta_hol.pgm  harta_hol.yaml  (+36 more)
ros2_ws/src/amr2ax_nav2/scripts/: README_WAYPOINTS.md  clicked_point_to_goal_update.py  export_waypoints_json.py  generate_map.py  get_waypoint_coords.py  rtk_bridge.py  send_dynamic_follow_goal.py  test_dynamic_follow.sh  waypoint_follower_node.py  waypoint_mcp.py  waypoint_nav.py  waypoint_service_node.py  waypoints.json  waypoints.yaml
ros2_ws/src/dummybot_autonomous_slam/: package.xml  setup.cfg  setup.py
ros2_ws/src/dummybot_autonomous_slam/config/: exploration_params.yaml
ros2_ws/src/dummybot_autonomous_slam/dummybot_autonomous_slam/: frontier_explorer.py
ros2_ws/src/dummybot_autonomous_slam/launch/: autonomous_slam.launch.py  explore_only.launch.py
ros2_ws/src/dummybot_bringup/: CMakeLists.txt  package.xml  plugins.xml
ros2_ws/src/dummybot_bringup/bringup/config/: dummybot_controllers.yaml  hd_pro_webcam_c920_v2.yaml  ld19.yaml  ld19_v0.yaml
ros2_ws/src/dummybot_bringup/bringup/launch/: base.launch.py  dummybot.launch.py  robot.launch.py  sensors.launch.py
ros2_ws/src/dummybot_bringup/bringup/launch/include/: camera.launch.py  ld19.launch.py  ld19.launch_v0.py
ros2_ws/src/dummybot_bringup/description/urdf/: dummybot.ros2_control.xacro  dummybot.urdf copy.xacro  dummybot.urdf.xacro  dummybot_old.urdf.xacro
ros2_ws/src/dummybot_bringup/hardware/include/: dummybot_hardware_interface.hpp
ros2_ws/src/dummybot_bringup/hardware/src/: dummybot_hardware_interface.cpp
ros2_ws/src/dummybot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/dummybot_control/dummybot_control/: esp32_hardware_interface.py  lidar_direct_node.py  lidar_node.py  lidar_raw_node.py  motor_controller_OLD_BACKUP.py  unified_controller.py
ros2_ws/src/dummybot_control/launch/: dummybot_launch.py  esp32_hardware.launch.py
ros2_ws/src/dummybot_description/: CMakeLists.txt  package.xml
ros2_ws/src/dummybot_description/launch/: display.launch.py  display_no_gui.launch.py
ros2_ws/src/dummybot_description/rviz/: dummybot.rviz
ros2_ws/src/dummybot_description/urdf/: dummybot_base.urdf  dummybot_base.urdf.backup
ros2_ws/src/dummybot_navigation/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/dummybot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_backup.yaml  nav2_params_no_odom.yaml  slam_toolbox_params.yaml
ros2_ws/src/dummybot_navigation/launch/: navigation.launch.py  slam.launch.py  slam_and_nav.launch.py  slam_and_nav_minimal.launch.py  slam_mapping.launch.py  slam_with_real_odom.launch.py
ros2_ws/src/dummybot_navigation/maps/: map_export.txt  my_map.pgm  my_map.yaml  test_map.pgm  test_map.yaml
ros2_ws/src/ldrobot_lidar_ros2/ldlidar_node/config/: ldlidar.yaml
ros2_ws/src/ldrobot_lidar_ros2/ldlidar_node/launch/: ldlidar.launch.py
ros2_ws/src/media_pipe_ros2/: package.xml  setup.py  setup.py.backup
ros2_ws/src/media_pipe_ros2/media_pipe_ros2/: hand_follower.py  hands_detector.py  pose_detector.py  pose_follower.py
ros2_ws/src/media_pipe_ros2_msg/: CMakeLists.txt  package.xml
ros2_ws/src/media_pipe_ros2_msg/msg/: MediaPipeHumanHand.msg  MediaPipeHumanHandList.msg  MediaPipeHumanPose.msg  MediaPipeHumanPoseList.msg  PosePoint.msg
scripts/: motor_calibration_node.py  scan_bridge.py  test_straight_1m.py
scripts/utils/: cmd_vel_bridge.py  rviz_goal_bridge.py
